--- a/default.css
+++ b/default.css
@@ -2,16 +2,15 @@ body {
   margin-right: 100px;
   margin-left: 100px;
   font-family: Verdana, Geneva, sans-serif;
-  color: #1D578C;
-  background-color: #BDBDBD;
+  color: #CD0B07;
+  background-color: 110B0B;
   font-size:  17px;
   letter-spacing: -0.4px;
 }
 
   h1 {
   text-align: center;
-  font-size: 200%;
-  background-color:#58A6F0;
+  font-size: 38px;
   padding: 8px;
   }
   
@@ -24,5 +23,8 @@ body {
 
 h2 {
 text-align: center; 
-  font-size:  35px;
+  font-size:  25px;
 }
+
+footer {
+	text-align: center
