--- a/default.css
+++ b/default.css
@@ -3,7 +3,7 @@ body {
   margin-left: 100px;
   font-family: Verdana, Geneva, sans-serif;
   color: #CD0B07;
-  background-color: 110B0B;
+  background-color: #110B0B;
   font-size:  17px;
   letter-spacing: -0.4px;
 }
