--- a/styles/default.css
+++ b/styles/default.css
@@ -1,6 +1,3 @@
-html {
-	padding: 10px;
-}
 
 body {
   margin-right: 100px;
@@ -10,12 +7,17 @@ body {
   background-color: #C6E0FF;
   font-size:  17px;
   letter-spacing: -0.4px;
+  
 }
 
   h1 {
   text-align: center;
-  font-size: 38px;
-  padding: 8px;
+  font-size: 55px;
+  padding: 15px;
+  font-family: "Chau Philomene One", sans-serif;
+  background-color: #8AADD0;
+  margin-right:20px;
+  margin-left:20px;
   }
   
   .border{  
@@ -23,14 +25,25 @@ body {
 	border-width:2px;
 	border-color: #315659;
 	padding: 10px;
-	margin: 10px;
+	margin: 20px;
+    background-color: #8AADD0;
 }
 
 h2 {
 text-align: center; 
-  font-size:  25px;
+  font-size:  35px;
+  
+  
 }
-
+h3 {
+	font-family: Montaga, serif;
+	font-size: 25px;
+	color: #2C383A;
+}
+.center{
+	
+	text-align:center;
+}
 footer {
 	text-align: center	
 }
@@ -45,7 +58,16 @@ a:link {
 
 figure {
 	text-align:center;
+	font style: italic;
 	padding-top: 10px;
 	padding-bottom: 10px;
+}
+figcaption {
+	font-style: italics;
+}
+li{
+	font-family: Montaga, serif;
+	font-size: 25px;
+	color: #2C383A;
 }
 	
